<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddReceiptFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/actionbar_color"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add_receipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/add_receipt"
            android:textAppearance="@style/Text.20sp"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="tin_name,tin_date,sum_tariff,tin_v1,tin_v2,tin_v3,tin_v4,tin_v5,tin_v6,btn_save"
        app:flow_verticalStyle="spread_inside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sum_tariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tariff_placeholder"
        android:textAppearance="@style/Text.20sp"
        android:textColor="@color/tariff_txt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date"
            android:inputType="date"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_v1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_v1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/v1"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_v2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_v2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/v2"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_v3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_v3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/v3"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_v4"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_v4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/v4"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_v5"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_v5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/v5"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_v6"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_v6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/v6"
            android:textAppearance="@style/Text.16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="SAVE"
        android:textAppearance="@style/Text.24sp" />
</androidx.constraintlayout.widget.ConstraintLayout>