<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:elevation="30dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/card_border"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_tariff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/deleteImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/trash_can"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:constraint_referenced_ids="tv_name,tv_date,tv_tariff"
                app:flow_horizontalAlign="start"
                app:flow_verticalGap="7dp"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_placeholder"
                android:textAppearance="@style/Text.16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_placeholder"
                android:textAppearance="@style/Text.16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tariff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tariff_placeholder"
                android:textAppearance="@style/Text.16sp"
                android:textColor="@color/tariff_txt" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                app:dividerColor="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flow_fields" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_tariff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/arrow_open"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_tariff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_v1,tv_v2,tv_v3,tv_v4,tv_v5,tv_v6"
                app:flow_horizontalAlign="start"
                app:flow_verticalGap="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_tariff" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v1_placeholder"
                android:textAppearance="@style/TariffValues" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_v2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v2_placeholder"
                android:textAppearance="@style/TariffValues" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_v3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v3_placeholder"
                android:textAppearance="@style/TariffValues" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_v4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v4_placeholder"
                android:textAppearance="@style/TariffValues" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_v5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v5_placeholder"
                android:textAppearance="@style/TariffValues" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_v6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v6_placeholder"
                android:textAppearance="@style/TariffValues" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>