<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    tools:context="ui.fragments.AddDatabaseDialogFragment">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="tIn_name_db,flow_btns"
        app:flow_verticalGap="30dp"
        app:flow_verticalStyle="spread_inside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tIn_name_db"
        android:layout_width="0dp"
        app:helperText="@string/withoutDb"
        app:helperTextTextAppearance="@style/Text.14sp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_db"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/et_nameNew_db"
            android:textAppearance="@style/Text.16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_btns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="btn_cancel,btn_add"
        app:flow_horizontalGap="40dp"
        app:flow_horizontalStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_add"
        android:textAppearance="@style/Text.24sp"
        app:cornerRadius="4dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_cancel"
        android:textAppearance="@style/Text.24sp"
        app:cornerRadius="4dp" />
</androidx.constraintlayout.widget.ConstraintLayout>