<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_darker"
    tools:context=".ui.fragments.ReceiptsListFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/actionbar_color"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_to_db_list"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/head_lines" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/main_label"
            android:textAppearance="@style/Text.20sp"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_delete_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/bar"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@id/bar"
        app:srcCompat="@drawable/trash_can" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectOrClearAllTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:paddingVertical="3dp"
        android:textAppearance="@style/Text.20sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/rv_receipts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar"
        tools:text="@string/select_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_receipts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectOrClearAllTextView"
        tools:listitem="@layout/item_receipt" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/db_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:constraint_referenced_ids="btn_delete_dbs,btn_add_db"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_add_db"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/add_db" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete_dbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/delete_all"
                android:textAppearance="@style/Text.12sp"
                app:cornerRadius="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dbs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flow_btns"
                tools:listitem="@layout/item_db" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/add_receipt"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/add_db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>